--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.4.8",
+    "@types/jsonwebtoken": "^9.0.7",
     "framer-motion": "^11.11.8",
     "generate-password": "^1.7.1",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
